# tmpl

./: .gitignore  CLIBRARY.md  CMakeLists.txt  README.md  TYPEDF.md  tmpl.sln
tmpl-script/: CMakeLists.txt  test.tmpl  tmpl-script.vcxproj  tmpl-script.vcxproj.filters
tmpl-script/include/: cli.h  error.h  helper.h  interpreter.h  iterator.h  lexer.h  location.h  node.h  parser.h  token.h  typechecker.h
tmpl-script/include/interpreter/: environment.h  value.h
tmpl-script/include/node/: assign.h  cast.h  export.h  expression.h  function.h  generic.h  identifier.h  instance.h  list.h  literal.h  logical.h  loop.h  macros.h  object_member.h  procedure.h  program.h  return.h  statement.h  type.h  unary.h  var_declaration.h
tmpl-script/include/typechecker/: typedf.h
tmpl-script/src/: cli.cpp  error.cpp  helper.cpp  interpreter.cpp  lexer.cpp  main.cpp  node.cpp  parser.cpp  token.cpp  typechecker.cpp
tmpl-script/src/interpreter/: assign.cpp  cast.cpp  environment.cpp  expr.cpp  fn_call.cpp  fn_decl.cpp  fn_extern_call.cpp  for.cpp  identifier.cpp  if_else.cpp  import.cpp  instance.cpp  list.cpp  literal.cpp  proc_decl.cpp  return.cpp  type.cpp  typedf.cpp  value.cpp  var_decl.cpp  while.cpp
tmpl-script/src/node/: assign.cpp  cast.cpp  export.cpp  expression.cpp  function.cpp  generic.cpp  identifier.cpp  instance.cpp  list.cpp  literal.cpp  logical.cpp  loop.cpp  macros.cpp  object_member.cpp  procedure.cpp  program.cpp  statements_node.cpp  type.cpp
tmpl-script/src/parser/: break.cpp  common.cpp  export.cpp  expr.cpp  for.cpp  function.cpp  generic.cpp  proc.cpp  (+9 more)
(+85 files in other folders)
